--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.welcome.WenJinIntro"
+            android:label="@string/title_activity_intro">
+        </activity>
+        <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask" >
