--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.github.paolorotolo:appintro:4.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:23.1.0'
+
     compile('com.mikepenz:materialdrawer:4.4.9@aar') {
         transitive = true
     }
