--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
+        maven { url "https://jitpack.io" }
         maven {
             url "http://maven.bughd.com/public"
         }
