--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,6 @@ dependencies {
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.github.paolorotolo:appintro:4.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:23.1.0'
     compile 'com.github.lzyzsd:jsbridge:1.0.4'
     compile('com.mikepenz:materialdrawer:4.4.9@aar') {
         transitive = true
@@ -70,4 +69,5 @@ dependencies {
     compile files('libs/additionnal.jar')
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
+    compile files('libs/pgyer_sdk_2.4.1.jar')
 }
